--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=devide-width, initial-scale=1.0">
     <title>Memory Game</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 <h1>Memory game</h1>
@@ -12,6 +13,8 @@
 
 </div>
 <h2>You win!</h2>
+<h2 id="resultat"></h2>
+<button type="submit" id="reload">Relancer la partie !</button>
 </body>
 <script src="app.js"></script>
 </html>
